--- a/environment-gpu.yml
+++ b/environment-gpu.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
   - pytorch
 dependencies:
-  - python<3.8,>3.6
+  - python==3.7.5
   - pip
   - numpy
   - pytorch
@@ -20,3 +20,4 @@ dependencies:
     - bohrium
     - https://storage.googleapis.com/jax-releases/cuda101/jaxlib-0.1.51-cp37-none-manylinux2010_x86_64.whl
     - jax
+    - https://ms-release.obs.cn-north-4.myhuaweicloud.com/0.6.0-beta/MindSpore/gpu/ubuntu_x86/cuda-10.1/mindspore_gpu-0.6.0-cp37-cp37m-linux_x86_64.whl
