--- a/environment-cpu.yml
+++ b/environment-cpu.yml
@@ -12,8 +12,9 @@ dependencies:
   - numba
   - click
   - scipy
+  - matplotlib
   - pip:
     - bohrium
     - jaxlib
     - jax
-    - https://ms-release.obs.cn-north-4.myhuaweicloud.com/0.6.0-beta/MindSpore/cpu/ubuntu_x86/mindspore-0.6.0-cp37-cp37m-linux_x86_64.whl
+    - https://ms-release.obs.cn-north-4.myhuaweicloud.com/0.7.0-beta/MindSpore/cpu/ubuntu_x86/mindspore-0.6.0-cp37-cp37m-linux_x86_64.whl
